[tool.poetry]
name = "rl"
version = "0.1.0"
description = "discovering reinforcement learning"
authors = ["Alexander <as.frantsev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "1.13.1"
gym = {extras = ["mujoco"], version = "^0.26.2"}
gymnasium = "^0.29.1"
pygame = "^2.5.1"
imageio = "^2.31.3"
pyyaml = "^6.0.1"
stable-baselines3 = "^2.1.0"
swig = "^4.1.1"
box2d-py = "^2.3.8"
wasabi = "^1.1.2"
torchrl = "^0.1.1"
kaggle = "^1.5.16"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
numpy = "1.24.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
tqdm = "^4.66.1"
iprogress = "^0.4"
tensorboard = "^2.14.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
